# simple-crawler

./: .envrc.dist  .gitignore  .pre-commit-config.yaml  README.md  README_interview.md  data_conn.py  dev_requirements.txt  requirements.txt
.github/workflows/: pytests.yml
data/: test.db  url.db
docs/: async_listener.py  async_pubsub.py  decode.py  flow.md  prettytables.py
scripts/dlt/: load_duckdb.py
scripts/docker /: docker_compose.yml  dockerfile  worker.py
scripts/pipx/: __main__.py  pyproject.toml
scripts/selenium/: exe_java_script.py
scripts/unused_code/: events_db.py  main.py  main_pc.py  on_end_funcs.py  queueing.py  recursive_sitemaps.py  test_manager.py  test_queueing.py
simple_crawler/: app.py  cache.py  cli.py  data.py  downloader.py  helper_classes.py  main.py  manager.py  mapper.py  parser.py  requirements.txt  simple-crawler.code-workspace  utils.py
simple_crawler/config/: config.toml  configuration.py  handlers.py  logging_config.yml  sqlite.yml
tests/: conftest.py  test_cache.py  test_cache_async.py  test_data.py  test_downloader.py  test_manager.py  test_mapper.py  test_parser.py
tests/data/2025_05_22_11_30_42/: sitemap_indexes.json
