[build-system]
requires = ["pipx>=1.7.1"]

[project]
name = "my-package"
version = "0.1.0"
authors = [
  { name = "Collin Wischmeyer", email = "cjwischnmeyer@gmail.com" },
]
description = "A somewhat time-limited web crawler implementation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Ubuntu",
]
dependencies = [
    "requests>=2.28.1",
    "pandas",
    "aiohttp>=3.8.5",
    "aiosqlite>=0.21.0",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.12.0",
    "black>=23.3.0",
    "cfgv==3.4.0",
    "distlib==0.3.9",
    "fakeredis @ git+https://github.com/cunla/fakeredis-py@190f613",
    "filelock==3.18.0",
    "identify==2.6.10",
    "isort>=5.10.1",
    "loguru>=0.7.0",
    "lxml>=5.4.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "nodeenv==1.9.1",
    "platformdirs==4.3.7",
    "pre_commit==4.2.0",
    "protego>=0.2.1",
    "Pygments==2.19.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-mock==3.14.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "PyYAML==6.0.2",
    "redis>=6.1.0",
    "requests>=2.31.0",
    "rich>=14.0.0",
    "ruff>=0.1.1",
    "ruff==0.11.8",
    "sqlalchemy>=2.0.0",
    "virtualenv==20.31.1",
    "dlt==1.11.0",
    "dlt[duckdb]",
]

[project.scripts]
greet = "simple_crawler.cli:main"

[project.urls]
Documentation = "https://github.com/wischmcj/simple_crawler/blob/main/README.md"
Source = "https://github.com/wischmcj/simple_crawler"
